[gd_scene load_steps=8 format=3 uid="uid://brfafs40nxg43"]

[ext_resource type="Script" path="res://Scripts/Player.gd" id="1_plsyy"]
[ext_resource type="Texture2D" uid="uid://cb7mcesitkwdl" path="res://Assets/Sprites/playerTemp.png" id="2_e1k7d"]
[ext_resource type="Texture2D" uid="uid://c7q722vag83u2" path="res://Assets/Sprites/reticle.png" id="3_ebdcu"]

[sub_resource type="AtlasTexture" id="AtlasTexture_tw5jg"]
atlas = ExtResource("2_e1k7d")
region = Rect2(0, 0, 16, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_7k0fh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tw5jg")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"new_animation",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1bo3f"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ec67u"]
size = Vector2(19, 16)

[node name="Player" type="CharacterBody2D"]
position = Vector2(347, 185)
scale = Vector2(2, 2)
collision_layer = 9
collision_mask = 9
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_plsyy")

[node name="PlayerSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_7k0fh")

[node name="AnimationPlayer" type="AnimationPlayer" parent="PlayerSprite"]

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2(0, 8)
shape = SubResource("RectangleShape2D_1bo3f")

[node name="DialogueArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="Dialog Hitbox" type="CollisionShape2D" parent="DialogueArea"]
shape = SubResource("RectangleShape2D_ec67u")

[node name="ContainersArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="ContainersHitbox" type="CollisionShape2D" parent="ContainersArea"]
shape = SubResource("RectangleShape2D_ec67u")

[node name="Aiming Reticle" type="Sprite2D" parent="."]
texture = ExtResource("3_ebdcu")

[node name="GunRay" type="RayCast2D" parent="."]
target_position = Vector2(0, 700)

[node name="GunRayDebug" type="Line2D" parent="."]
visible = false
points = PackedVector2Array(0, 0, 0, 0)
